Navigation: No longer collapse complete navigation when small screen

--- a/client/app/styles/main.scss
+++ b/client/app/styles/main.scss
@@ -360,13 +360,12 @@ story-with-tasks > div {
         }
     }
 }
-.navbar span.nav-item {
-    padding: 0px 10px 0px 10px;
-    color: #a5a5a5;
-    border-right: solid 1px #a5a5a5;
-    
+ul.nav li {    
     .dropdown owner-image img {
-        height: 25px;
+        height: 30px;
+    }
+    &.link a:hover {
+        background-color: #e7e7e7;
     }
 }
 .drag-hide {
